Fix blurry dialogs

--- a/comp/dialog.less
+++ b/comp/dialog.less
@@ -16,7 +16,7 @@
 	.transition();
 
 	&.active {
-		transform: scale(1) translate(-50%,-50%);
+		transform: scale(1) translate(-50%,-51%);
 		opacity: 1;
 	}
 
